Fix background cover / overflow issues.

--- a/css/mpl.css
+++ b/css/mpl.css
@@ -11,20 +11,29 @@ body {
   font-family: sans-serif;
 }
 
+html {
+  overflow-y: hidden;
+}
+
 body {
   width: 100%;
   height: 100%;
   color: #ffffff;
   background-color: #131313;
   background-image: url('../img/background.jpg');
-  background-position: center;
+  background-position: center center;
   background-attachment: fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
+  overflow-y: scroll;
 }
 
-.container {
+#container {
   position: relative;
   min-height: 100%;
+  overflow: hidden;
 }
 
 .flex-centered {
@@ -62,7 +71,6 @@ body {
 
 #regions {
   min-height: calc(100vh - 200px);
-  overflow: hidden;
 }
 
 .region {
